--- a/trade/src/main/webapp/css/main_styles.css
+++ b/trade/src/main/webapp/css/main_styles.css
@@ -7,22 +7,43 @@ body {
 	background-color: #ffffff;
 }
 
+.slider-container {
+	width: 60%; /* 슬라이더 컨테이너의 너비를 조절하여 여백 추가 */
+	margin: 100px auto 0; /* 위쪽 여백 추가 및 가운데 정렬 */
+	height: 60vh; /* 조절 가능한 높이 */
+	overflow: hidden;
+	position: relative;
+}
+
+.slider {
+	display: flex;
+	transition: transform 0.5s ease-in-out;
+}
+
+.slider img {
+	width: 100%;
+	height: 100%;
+	object-position: center; /* 이미지 중앙에 위치 */
+}
+
+/* 밑으로 추천 상품 슬라이더 */
+
+.title {
+	width: 100%;
+	text-align: left;
+	font-size: 30px;
+	font-weight: bold;
+	margin-top: 50px;
+}
+
 .container {
 	max-width: 1200px;
-	margin: 150px auto;
+	margin: 80px auto;
 	padding: 0 20px;
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: flex-start; /* 왼쪽으로 배치 */
 	gap: 30px; /* 아이템 사이의 간격 */
-}
-
-.title {
-	width: 100%;
-	text-align: center;
-	margin-bottom: 50px;
-	font-size: 30px;
-	font-weight: bold;
 }
 
 .product {
@@ -38,6 +59,7 @@ body {
 .product:hover { /* 틀 그림자 무지개 호버 */
 	animation: colorfulShadow 2s infinite;
 }
+
 
 .product img {
 	width: 100%;
@@ -79,6 +101,7 @@ body {
     75% { box-shadow: 0 4px 8px rgba(0, 0, 255, 0.1); }
     100% { box-shadow: 0 4px 8px rgba(255, 0, 255, 0.1); }
 }
+
 
 
 footer {
