메인 css 경로 수정 login.jsp 만들기만함

--- a/trade/src/main/webapp/css/header.css
+++ b/trade/src/main/webapp/css/header.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Noto Sans KR', sans-serif;
     background-color: #ffffff; /* 흰 배경색 */
     margin: 0;
     padding: 0;
