--- a/trade/src/main/webapp/css/login.css
+++ b/trade/src/main/webapp/css/login.css
@@ -12,9 +12,10 @@ body {
 
 .login-container {
     background-color: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    padding: 30px;
+    border-radius: 10px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+    width: 400px;
 }
 
 form {
@@ -23,17 +24,22 @@ form {
 }
 
 label {
-    margin-bottom: 8px;
+    margin-bottom: 10px;
+    color: #333;
 }
 
 input {
-    padding: 8px;
-    margin-bottom: 16px;
+    padding: 10px;
+    margin-bottom: 20px;
+    width: 100%;
+    box-sizing: border-box;
+    border: 1px solid #ddd;
+    border-radius: 4px;
 }
 
 button {
     padding: 10px;
-    background-color: #4caf50;
+    background-color: #191970;
     color: #fff;
     border: none;
     border-radius: 4px;
@@ -42,5 +48,7 @@ button {
 }
 
 button:hover {
-    background-color: #45a049;
+    background-color: #000000;
 }
+
+
