검색어/목록

--- a/trade/src/main/webapp/css/header.css
+++ b/trade/src/main/webapp/css/header.css
@@ -66,7 +66,14 @@ header:hover {
 
 .search input {
     padding: 10px;
-    border: none;
+    border: 3px solid #a3a3a3; /* 검은색 테두리 설정 */
+    border-radius: 25px;
+    margin-right: 10px;
+    width: 200px;
+}
+.search input:hover {
+    padding: 10px;
+    border: 3px solid #000; /* 검은색 테두리 설정 */
     border-radius: 25px;
     margin-right: 10px;
     width: 200px;
