--- a/trade/src/main/webapp/css/productContent.css
+++ b/trade/src/main/webapp/css/productContent.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+
 body {
 	font-family: 'Noto Sans KR', sans-serif;
 	margin: 0;
@@ -20,7 +21,7 @@ body {
 	width: 40%;
 	padding-right: 20px; /* 이미지 컨테이너 오른쪽 여백 추가 */
 	display: flex;
-	flex-direction: row;
+	flex-direction: column;
 	align-items: center; /* 가로 방향 가운데 정렬 */
 	justify-content: center; /* 세로 방향 가운데 정렬 */
 }
@@ -31,6 +32,31 @@ body {
 	border-radius: 8px; /* 이미지에도 둥근 테두리 적용 */
 }
 
+.image-preview {
+	display: inline-block;
+	width: 90%; /* 이미지 미리보기의 가로 크기를 조정 */
+	height: 60%; /* 이미지 미리보기의 세로 크기를 조정 */
+	
+	vertical-align: middle;
+	border: 1px solid;
+}
+
+.image-preview-choice {
+	display: flex;
+	flex-direction: row;
+}
+
+.clickable-image {
+	cursor: pointer; /* 마우스 커서를 손가락 포인터로 변경하여 클릭 가능한 요소임을 나타냄 */
+	border: 2px solid #ccc; /* 이미지 주변에 회색 테두리 표시 (선택 사항) */
+	margin: 5px; /* 이미지 사이의 여백 설정 (선택 사항) */
+	width: 30px;
+}
+
+.clickable-image:hover {
+	border-color: #999; /* 마우스를 이미지 위로 올릴 때 테두리 색 변경 (선택 사항) */
+}
+
 .form-container {
 	flex: 1;
 	padding-left: 20px;
@@ -39,9 +65,11 @@ body {
 .form-group {
 	margin-bottom: 20px;
 }
+
 .form-group2 {
 	display: flex;
 }
+
 .form-group label {
 	display: block;
 	margin-bottom: 8px;
@@ -85,7 +113,6 @@ body {
 	margin-bottom: 20px;
 	border-bottom: 2px solid #388e3c; /* 더 진한 녹색 계열의 밑줄 추가 */
 	padding-bottom: 5px;
-	
 }
 
 h2 {
@@ -101,14 +128,14 @@ h2 {
 	background-color: #ccc; /* 어두운 배경색 (예: 회색) */
 }
 
- /* 팝업 전체 스타일 */
-  .modal {
-      display: block;
-      width: 300px;
-      margin: 50px auto;
-      background-color: #f9f9f9;
-      border: 1px solid #ccc;
-      box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
-      padding: 20px;
-      border-radius: 5px;
-  }
+/* 팝업 전체 스타일 */
+.modal {
+	display: block;
+	width: 300px;
+	margin: 50px auto;
+	background-color: #f9f9f9;
+	border: 1px solid #ccc;
+	box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+	padding: 20px;
+	border-radius: 5px;
+}
