--- a/trade/src/main/webapp/css/productContent.css
+++ b/trade/src/main/webapp/css/productContent.css
@@ -4,14 +4,15 @@ body {
    font-family: 'Noto Sans KR', sans-serif;
    margin: 0;
    padding: 0;
-   background-color: #f1f8e9; /* 더 세련된 녹색 계열 배경색 */
+   background-color: #f5f5f5; /* 연한 회색 배경색 */
+   color: #333; /* 어두운 회색 계열 텍스트 색상 */
 }
 
 .container {
-   max-width: 800px;
+   max-width: 80%;
    margin: 100px auto; /* 여기서 상단 여백 조정 */
    padding: 20px;
-   background-color: #c8e6c9; /* 더 진한 녹색 계열 배경색 */
+   background-color: #fff; /* 흰색 배경색 */
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
    border-radius: 8px;
    overflow: hidden;
@@ -30,15 +31,21 @@ body {
    max-width: 100%;
    max-height: 200px;
    border-radius: 8px; /* 이미지에도 둥근 테두리 적용 */
+   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* 이미지에 그림자 추가 */
+   transition: transform 0.3s; /* 이미지 확대/축소 트랜지션 추가 */
+}
+
+.image-container img:hover {
+   transform: scale(1.1); /* 이미지 확대 효과 */
 }
 
 .image-preview {
-	display: inline-block;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	width: 90%; /* 이미지 미리보기의 가로 크기를 조정 */
 	height: 60%; /* 이미지 미리보기의 세로 크기를 조정 */
-	
-	/* vertical-align: middle; */
-	border: 1px solid;
+/*	border: 1px solid;*/
 }
 
 .image-preview-choice {
@@ -74,15 +81,17 @@ body {
    display: block;
    margin-bottom: 8px;
    font-weight: bold;
-   color: #2e7d32; /* 더 진한 녹색 계열 글자색 */
+   color: #555; /* 어두운 회색 텍스트 색상 */
 }
 
 .form-group input, .form-group textarea, .form-group select {
    width: 100%;
    padding: 8px;
-   border: 1px solid #388e3c; /* 더 진한 녹색 계열 테두리 */
+   border: 1px solid #ccc; /* 연한 회색 테두리 색상 */
    border-radius: 4px;
    box-sizing: border-box;
+   background-color: #f9f9f9; /* 매우 연한 회색 배경색 */
+   color: #333; /* 어두운 회색 텍스트 색상 */
 }
 
 .form-group select {
@@ -93,34 +102,46 @@ body {
    display: block;
    width: 100%;
    padding: 10px;
-   background-color: #4caf50; /* 녹색 계열 버튼 배경색 */
-   color: #fff;
+   margin: 5px;
+   background-color: #222; /* 어두운 검정 계열 배경색 */
+   color: #fff; /* 흰색 텍스트 색상 */
    text-align: center;
    text-decoration: none;
    border: none;
    border-radius: 4px;
    cursor: pointer;
    transition: background-color 0.3s;
+   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* 버튼에 그림자 추가 */
 }
 
 .submit-button:hover {
-   background-color: #388e3c; /* 더 진한 녹색 계열로 호버 시 변경 */
+   background-color: #333; /* 더 어두운 검정 계열로 호버 시 변경 */
+}
+
+.button-container {
+   margin: 10px auto; /* 여기서 상단 여백 조정 */
+   padding: 20px;
+   background-color: #fff; /* 흰색 배경색 */
+   border-radius: 8px;
+   overflow: hidden;
+   display: flex;
+   flex-direction: row;
 }
 
 .h1 {
    font-size: 30px;
-   color: #2e7d32; /* 더 진한 녹색 계열 글자색 */
+   color: #222; /* 어두운 검정 계열 텍스트 색상 */
    margin-bottom: 20px;
-   border-bottom: 2px solid #388e3c; /* 더 진한 녹색 계열의 밑줄 추가 */
+   border-bottom: 2px solid #333; /* 어두운 회색 계열의 밑줄 추가 */
    padding-bottom: 5px;
  
 }
 
 h2 {
    font-size: 24px;
-   color: #2e7d32; /* 더 진한 녹색 계열 글자색 */
+   color: #222; /* 어두운 검정 계열 텍스트 색상 */
    margin-bottom: 20px;
-   border-bottom: 2px solid #388e3c; /* 더 진한 녹색 계열의 밑줄 추가 */
+   border-bottom: 2px solid #333; /* 어두운 회색 계열의 밑줄 추가 */
    padding-bottom: 5px;
 }
 
