--- a/trade/src/main/webapp/css/productList.css
+++ b/trade/src/main/webapp/css/productList.css
@@ -7,6 +7,25 @@ body {
 	background-color: #ffffff;
 }
 
+/* .title {
+	width: 100%;
+	text-align: center;
+	margin-bottom: 50px;
+	margin-top: 150px;
+	font-size: 30px;
+	font-weight: bold;
+}
+
+.container {
+   max-width: 1200px;
+   margin: 150px auto;
+   padding: 0 20px;
+   display: flex;
+   flex-wrap: wrap;
+   justify-content: flex-start; 왼쪽으로 배치
+   gap: 30px; 아이템 사이의 간격
+} */
+
 .product {
 	width: 23%;
 	margin: 5% 0;
