--- a/trade/src/main/webapp/css/productContent.css
+++ b/trade/src/main/webapp/css/productContent.css
@@ -20,7 +20,7 @@ body {
 
 .image-container {
    width: 40%;
-   padding-right: 20px; /* 이미지 컨테이너 오른쪽 여백 추가 */
+/*    padding-right: 20px; 이미지 컨테이너 오른쪽 여백 추가 */
    display: flex;
    flex-direction: column;
    align-items: center; /* 가로 방향 가운데 정렬 */
@@ -29,7 +29,7 @@ body {
 
 .image-container img {
    max-width: 100%;
-   max-height: 200px;
+/*    max-height: 100%; */
    border-radius: 8px; /* 이미지에도 둥근 테두리 적용 */
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* 이미지에 그림자 추가 */
    transition: transform 0.3s; /* 이미지 확대/축소 트랜지션 추가 */
