--- a/trade/src/main/webapp/css/productContent.css
+++ b/trade/src/main/webapp/css/productContent.css
@@ -19,7 +19,7 @@ body {
 }
 
 .image-container {
-   width: 40%;
+   width: 50%;
 /*    padding-right: 20px; 이미지 컨테이너 오른쪽 여백 추가 */
    display: flex;
    flex-direction: column;
@@ -29,7 +29,7 @@ body {
 
 .image-container img {
    max-width: 100%;
-/*    max-height: 100%; */
+   max-height: 100%;
    border-radius: 8px; /* 이미지에도 둥근 테두리 적용 */
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* 이미지에 그림자 추가 */
    transition: transform 0.3s; /* 이미지 확대/축소 트랜지션 추가 */
@@ -42,6 +42,7 @@ body {
 .image-preview {
 	display: flex;
 	justify-content: center;
+	margin-bottom: 3%;
 	align-items: center;
 	width: 90%; /* 이미지 미리보기의 가로 크기를 조정 */
 	height: 60%; /* 이미지 미리보기의 세로 크기를 조정 */
