--- a/trade/src/main/webapp/css/productUpload.css
+++ b/trade/src/main/webapp/css/productUpload.css
@@ -27,6 +27,19 @@ body {
    align-items: center;
    justify-content: center;
 }
+#uploadFile {
+   width: 100%;
+   padding: 8px;
+   border: 1px solid #ccc; /* 연한 회색 테두리 색상 */
+   border-radius: 4px;
+   box-sizing: border-box;
+   background-color: #f9f9f9; /* 매우 연한 회색 배경색 */
+   color: #333; /* 어두운 회색 텍스트 색상 */
+}
+
+#uploadFile > input {
+	border: none;
+}
 
 .image-container img {
    max-width: 100%;
