--- a/trade/src/main/webapp/css/main_styles.css
+++ b/trade/src/main/webapp/css/main_styles.css
@@ -38,8 +38,8 @@ body {
 }
 
 .container {
-	max-width: 100%;
-	margin: auto;
+	max-width: 1200px;
+	margin: 50px auto;
 	padding: 0 20px;
 	display: flex;
 	flex-wrap: wrap;
