--- a/member_mainpage_merge/src/main/webapp/css/login.css
+++ b/member_mainpage_merge/src/main/webapp/css/login.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 .b {
-    font-familsy: 'Noto Sans KR', sans-serif;
+    font-family: 'Noto Sans KR', sans-serif;
     margin: 0;
     display: flex;
     align-items: center;
