--- a/trade/src/main/webapp/css/productContent.css
+++ b/trade/src/main/webapp/css/productContent.css
@@ -154,7 +154,8 @@ body {
 	display: block;
 }
 
-.update-content-button {
+.update-button {
+	/* background-image: url("../img/etc-button.png"); */
 	background: none;
 	border: none;
 	cursor: pointer;
