--- a/trade/src/main/webapp/css/productContent.css
+++ b/trade/src/main/webapp/css/productContent.css
@@ -231,3 +231,16 @@ h2 {
 	margin-left: 20px;
 	padding: 0 0 0 20px;
 }
+.complain-button {
+	border:none;
+	background-color: white;
+	padding-left: 31rem;
+	font-size: 1.5rem;
+}
+
+textarea#otherReasonText, #otherReasonText2 {
+	width: 80%;
+	margin-left: 40px;
+	margin-top: 5px;
+	font-family: 'Noto Sans KR';
+}
