--- a/trade/src/main/webapp/css/productContent.css
+++ b/trade/src/main/webapp/css/productContent.css
@@ -42,7 +42,7 @@ body {
 }
 
 .image-container img {
-   max-width: 100%;
+   max-width: 60%;
    max-height: 100%;
    border-radius: 8px; /* 이미지에도 둥근 테두리 적용 */
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* 이미지에 그림자 추가 */
@@ -235,7 +235,7 @@ h2 {
 .complain-button {
 	border:none;
 	background-color: white;
-	padding-left: 31rem;
+	padding-left: 72%;
 	font-size: 1.5rem;
 }
 
