ID에 따라 상세페이지 조건 달리하기

--- a/trade/src/main/webapp/css/productContent.css
+++ b/trade/src/main/webapp/css/productContent.css
@@ -235,7 +235,7 @@ h2 {
 .complain-button {
 	border:none;
 	background-color: white;
-	padding-left: 72%;
+	float: right;
 	font-size: 1.5rem;
 }
 
