--- a/trade/src/main/webapp/css/productContent.css
+++ b/trade/src/main/webapp/css/productContent.css
@@ -250,3 +250,10 @@ textarea#otherReasonText, #otherReasonText2 {
 div#postReportOptions, #authorpostReportOptions {
 	line-height: 1.45rm;
 }
+
+
+#authorReportCheckbox, #postReportCheckbox {
+	transform: scale(1.5);
+	margin-right: 16px;
+}
+
