--- a/trade/src/main/webapp/css/productContent.css
+++ b/trade/src/main/webapp/css/productContent.css
@@ -25,7 +25,7 @@ body {
 	flex-direction: column;
 	align-items: center; /* 가로 방향 가운데 정렬 */
 	justify-content: center; /* 세로 방향 가운데 정렬 */
-}아이폰
+}
 
 .image-container img {
 	max-width: 30%;
@@ -41,8 +41,7 @@ body {
    justify-content: center; /* 세로 방향 가운데 정렬 */
 }
 
-<<<<<<< HEAD
-=======
+
 .image-container img {
    max-width: 60%;
    max-height: 100%;
@@ -51,7 +50,6 @@ body {
    transition: transform 0.3s; /* 이미지 확대/축소 트랜지션 추가 */
 }
 
->>>>>>> 27e39a9debdd61342bfef8eb8d5dd5c18cc58805
 .image-container img:hover {
 	transform: scale(1.1); /* 이미지 확대 효과 */
 }
