--- a/trade/src/main/webapp/css/productContent.css
+++ b/trade/src/main/webapp/css/productContent.css
@@ -43,7 +43,7 @@ body {
 
 
 .image-container img {
-   max-width: 100%;
+   max-width: 30%;     /*이미지 줄이기 부분이다 */
    max-height: 100%;
    border-radius: 8px; /* 이미지에도 둥근 테두리 적용 */
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* 이미지에 그림자 추가 */
