프로필 보는중

--- a/trade/src/main/webapp/css/productContent.css
+++ b/trade/src/main/webapp/css/productContent.css
@@ -165,6 +165,15 @@ body {
 	color: #333;
 	}
 
+.profile-button {
+	background: none;
+	border: none;
+	cursor: pointer;
+	font-size: 16px;
+	font-weight: bold;
+	color: #555;
+}
+
 .submit-button {
 	display: block;
 	width: 100%;
