--- a/trade/src/main/webapp/css/productPopup.css
+++ b/trade/src/main/webapp/css/productPopup.css
@@ -13,7 +13,7 @@
 
 .modal-content {
     background-color: #fff; /* 화이트 색상 */
-    width: 500px;
+    width: 26%;
     margin: 3% auto;
     padding: 20px;
     border-radius: 10px;
