--- a/trade/src/main/webapp/css/productContent.css
+++ b/trade/src/main/webapp/css/productContent.css
@@ -173,7 +173,7 @@ body {
 	font-weight: bold;
 	color: #555;
 }
-
+/* 판매하기 모달 */
 .submit-button {
 	display: block;
 	width: 100%;
@@ -192,6 +192,16 @@ body {
 
 .submit-button:hover {
 	background-color: #333; /* 더 어두운 검정 계열로 호버 시 변경 */
+}
+
+#priceSpan {
+	text-decoration: line-through;
+}
+
+#priceSpan2 {
+	padding-left: 15px;
+	font-weight: bold;
+	color: red;
 }
 
 .button-container {
