--- a/trade/src/main/webapp/css/removemember.css
+++ b/trade/src/main/webapp/css/removemember.css
@@ -14,11 +14,11 @@ fieldset {
         }
 
         form {
-            text-align: left;
+            text-align: center;
         }
 
         input[type="password"] {
-            width: 90%;
+            width: 50%;
             padding: 10px;
             margin: 5px 0;
             border: 1px solid #ccc;
@@ -26,14 +26,17 @@ fieldset {
         }
 
         input[type="submit"] {
-            background-color: #007BFF;
+            background-color: #222;
             color: #fff;
             border: none;
             border-radius: 5px;
             padding: 10px 20px;
             cursor: pointer;
+            margin-top: 10px;
+            text-align: center;
+       
         }
 
         input[type="submit"]:hover {
-            background-color: #0056b3;
+            background-color: #000000;
         }
