신고하기 모달 상위라디오버튼에 따른 하위요소 감춤

--- a/trade/src/main/webapp/css/productContent.css
+++ b/trade/src/main/webapp/css/productContent.css
@@ -257,6 +257,9 @@ h2 {
 } 
 
 /* 신고하기 모달창 */
+#postReportOptions, #authorReportOptions {
+	 margin-left: 40px; /*하위 사유 들여쓰기*/
+}
 
 .reasonCheckbox {
 	margin-left: 20px;
