--- a/trade/src/main/webapp/css/productModal.css
+++ b/trade/src/main/webapp/css/productModal.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 /* 스타일 설정 */
+/* 모달 전체 스타일 */
 .modal {
     display: none;
     position: fixed;
@@ -10,6 +11,16 @@
     background-color: rgba(255, 255, 255, 0.7); /* 밝은 배경색 */
     z-index: 1;
 }
+/* .modal {
+	display: none;
+	width: 300px;
+	margin: 50px auto;
+	background-color: #f9f9f9;
+	border: 1px solid #ccc;
+	box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+	padding: 20px;
+	border-radius: 5px;
+}  */
 
 .modal-content {
     background-color: #fff; /* 화이트 색상 */ 
@@ -22,12 +33,29 @@
     color: #000; /* 텍스트 색상을 블랙으로 지정 */
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); /* 그림자 효과 추가 */
     transition: box-shadow 0.3s; /* hover 시 그림자 변경 효과 설정 */
-/*     margin-top: 10%; 15%에서 10%로 변경 */
+    margin-top: 10rem; 
+    max-height: 70vh; /* 모달 창 최대 높이를 화면 높이의 70%로 제한 */
+    overflow-y: auto; /* 모달 내용이 높이를 넘어갈 때 세로 스크롤 허용 */
 }
 
 .modal-content:hover {
     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.4); /* hover 시 그림자 효과 강화 */
 }
+
+ /* 프로필 모달 스타일 */
+    #profileModal {
+        display: none;
+        position: fixed;
+        z-index: 1;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        overflow: auto; /* 모달 내용이 높이를 넘어갈 때 스크롤 허용 */
+        background-color: rgba(0, 0, 0, 0.6);
+        
+    }
+
 
 .close-button {
     position: absolute;
@@ -39,6 +67,7 @@
     border: none;
     background-color: white;
     text-decoration: underline;
+    padding-bottom: 7%;
 }
 
 .close-button:hover {
@@ -84,46 +113,84 @@
     margin-top: 30px; /* 버튼과 모달 정보 사이의 간격을 조정 */
     width: 100%; /* 버튼 너비를 100%로 설정하여 가로 전체를 채우게 함 */
 }
-
-p#noSell {
-	text-align: center;
+#pfHr {
+	margin-top: 10%;
 }
+p#noSell {text-align: center;}
+#sellCheckbox {float: left;}
+hr#hr1 {margin-top:10%;}
 
-#sellCheckbox {
-	float: left;
-}
-
-#sellDiv {
+#sellDiv, #sellDiv2 {
 	line-height: 1.9rem;
-}
+	}
+#pfDiv {margin:4%;
+padding-top:35px;}
 
-#sellDiv2 {
-	line-height: 1.9rem;
-}
-
-
-
-hr#hr1 {
-	margin-top:10%;
-}
-
-img#sellImage {
+img#sellImage, #pfImage {
 	float: left;
 	margin-right: 10%;
 	margin-left: 2%;
 	height: 130px;
 }
 
-#sellCheckbox {
-	transform: scale(1.5);
-}
+/* img#pfImage {
+	max-width: 160px;
+	height: auto;
+	display: flex;
+	align-items: center;
+} */
+
+
+#sellCheckbox {transform: scale(1.5);}
 
  #productInfo {
-      max-height: 500px;
-      overflow-y: auto;
-      overflow-x: hidden; /* 가로 스크롤바를 숨김 */
+   max-height: 500px;
+   overflow-y: auto;
+   overflow-x: hidden; /* 가로 스크롤바를 숨김 */
       
   }
+
+/* 신고하기 모달창 */
+#postReportOptions, #authorReportOptions {
+	 margin-left: 40px; 
+}
+
+.reasonCheckbox {
+	margin-left: 20px;
+	padding: 0 0 0 20px;
+}
+
+.complain-button {
+	border:none;
+	background-color: white;
+	float: right;
+	font-size: 1.5rem;
+}
+
+textarea#otherReasonText, #otherReasonText2 {
+	width: 80%;
+	margin-left: 40px;
+	margin-top: 5px;
+	font-family: 'Noto Sans KR';
+}
+
+/* 신고하기 모달창 행간 조절*/
+div#postReportOptions, #authorpostReportOptions {
+	line-height: 1.45rm;
+}
+
+
+#authorReportCheckbox, #postReportCheckbox {
+	transform: scale(1.5);
+	margin-right: 16px;
+}
+
+#productList {
+	margin: 15px;
+	cursor: pointer;
+	clear: both; /* float 요소들의 영향을 받지 않도록 설정 */
+}
+
 
 /* "신고하기" 버튼 스타일 */
 .confirm-button {
