--- a/trade/src/main/webapp/css/main_styles.css
+++ b/trade/src/main/webapp/css/main_styles.css
@@ -8,22 +8,38 @@ body {
 }
 
 .slider-container {
-	width: 60%; /* 슬라이더 컨테이너의 너비를 조절하여 여백 추가 */
-	margin: 100px auto 0; /* 위쪽 여백 추가 및 가운데 정렬 */
-	height: 60vh; /* 조절 가능한 높이 */
+/* 	width: 60%; */
+width: 60%; 
+text-align: -webkit-center;
+/*
+	margin: 100px auto 0; 위쪽 여백 추가 및 가운데 정렬
+	height: 60vh; 조절 가능한 높이
 	overflow: hidden;
-	position: relative;
+	position: relative; */
+  margin: 100px auto 0; /* 위쪽 여백 추가 및 가운데 정렬 */
+  height: 100%; /* 조절 가능한 높이 */
+  white-space: nowrap; /* 요소들을 가로로 나란히 표시 */
 }
 
+.bx-wrapper {
+	box-shadow: 0 0 5px #fff;
+	
+}
+
+
 .slider {
-	display: flex;
-	transition: transform 0.5s ease-in-out;
+	/* display: flex;
+	transition: transform 0.5s ease-in-out; */
+	width: 100%;
+  height: 100%;
+  object-fit: cover; /* 이미지를 화면에 맞게 조정 */
 }
 
 .slider img {
-	width: 100%;
-	height: 100%;
 	object-position: center; /* 이미지 중앙에 위치 */
+  max-width: 100%; /* 부모 요소에 맞게 이미지 크기 조정 */
+  height: auto; /* 이미지 비율 유지 */
+  max-height: 100%; /* 이미지가 부모 요소를 넘지 않도록 최대 높이 설정 */
 }
 
 /* 밑으로 추천 상품 슬라이더 */
@@ -34,7 +50,7 @@ body {
 	text-align: left;
 	font-size: 2.5rem;
 	font-weight: bold;
-	margin-top: 10rem;
+	margin-top: 5rem;
 }
 
 .container {
@@ -64,7 +80,7 @@ body {
 
 .product img {
 	width: 100%;
-	height: auto;
+	height: 200px;
 	object-fit: cover;
 	object-position: center top;
 	transition: transform 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94);
