--- a/trade/src/main/webapp/css/main_styles.css
+++ b/trade/src/main/webapp/css/main_styles.css
@@ -23,23 +23,22 @@ text-align: -webkit-center;
 
 .bx-wrapper {
 	box-shadow: 0 0 5px #fff;
-	
+	border:none;
+	background:#fff;
 }
 
-
 .slider {
-	/* display: flex;
-	transition: transform 0.5s ease-in-out; */
-	width: 100%;
-  height: 100%;
+  width: 100%;
+  height: 400px;
   object-fit: cover; /* 이미지를 화면에 맞게 조정 */
 }
 
 .slider img {
-	object-position: center; /* 이미지 중앙에 위치 */
+object-position: center; /* 이미지 중앙에 위치 */
   max-width: 100%; /* 부모 요소에 맞게 이미지 크기 조정 */
   height: auto; /* 이미지 비율 유지 */
   max-height: 100%; /* 이미지가 부모 요소를 넘지 않도록 최대 높이 설정 */
+  object-fit : contain; /*이미지 비율 유지 */
 }
 
 /* 밑으로 추천 상품 슬라이더 */
