--- a/trade/src/main/webapp/css/memberjoin.css
+++ b/trade/src/main/webapp/css/memberjoin.css
@@ -3,8 +3,8 @@
 fieldset {
   border: 2px solid #222;
   border-radius: 10px;
-  width: 45%;
-  margin: 0 auto; /* Center the fieldset horizontally */
+  width: 60%;
+  margin: 20px auto; /* Center the fieldset horizontally */
   padding: 20px;
 }
 
@@ -14,14 +14,51 @@ legend {
   margin-bottom: 10px;
 }
 
+fieldset label {
+	display: block;
+	font-weight: bold;
+	color: #333;
+}
+
+.form-group input, .form-group textarea {
+   padding: 8px;
+   border: 1px solid #ccc; /* 연한 회색 테두리 색상 */
+   border-radius: 4px;
+   box-sizing: border-box;
+   background-color: #f9f9f9; /* 매우 연한 회색 배경색 */
+   color: #333; /* 어두운 회색 텍스트 색상 */
+}
+
 /* Style form elements */
 form .in[type="text"],
 form .in[type="password"],
-form select {
+form .in[type="file"]{
   padding: 8px;
-  width: 28%;
+  width: 300px;
   border-radius: 4px;
   margin: 7px 2px 15px;
+}
+
+.form-group select {
+	width: 300px;
+	padding: 8px;
+	border: 1px solid #ccc; /* 연한 회색 테두리 색상 */
+	border-radius: 4px;
+	box-sizing: border-box;
+	background-color: #f9f9f9; /* 매우 연한 회색 배경색 */
+	color: #333;
+	 margin: 7px 2px 15px;
+}
+
+.birth select {
+	width: 200px;
+	padding: 8px;
+	border: 1px solid #ccc; /* 연한 회색 테두리 색상 */
+	border-radius: 4px;
+	box-sizing: border-box;
+	background-color: #f9f9f9; /* 매우 연한 회색 배경색 */
+	color: #333;
+	 margin: 7px 2px 15px;
 }
 
 form .in[type="button"],
@@ -33,11 +70,14 @@ form .in[type="submit"] {
   border: none;
   border-radius: 5px;
   cursor: pointer;
+  width: 150px;
 }
 
 /* Style the radio buttons and labels */
 form .in[type="radio"] {
   margin-bottom: 10px;
+  padding: 8px;
+  margin: 7px 2px 15px 15px;
 }
 
 /* Add some spacing between elements */
@@ -66,4 +106,8 @@ form select {
 /* Optional: Style the "검색하기" button */
 form .in[type="button"]#searchButton {
   margin-left: 10px;
+}
+
+.btn {
+	text-align: center;
 }
