--- a/trade/src/main/webapp/css/header.css
+++ b/trade/src/main/webapp/css/header.css
@@ -27,7 +27,7 @@ header:hover {
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); 
 }
 
-nav{
+#navbar{
 	text-align:center;
 	align-items: center;
 }
