--- a/trade/src/main/webapp/css/productList.css
+++ b/trade/src/main/webapp/css/productList.css
@@ -223,3 +223,8 @@ footer {
 	padding: 10px 0;
 	align-self: flex-end; /* 푸터를 아래쪽으로 정렬 */
 }
+
+.disabled {
+   opacity: 0.5;
+    background-color: #CCCCCC;
+}
