--- a/trade/src/main/webapp/css/main_styles_mypage.css
+++ b/trade/src/main/webapp/css/main_styles_mypage.css
@@ -103,4 +103,8 @@ body {
     100% { box-shadow: 0 0 8px rgba(255, 0, 255, 0.1); }
 }
 
+.disabled {
+   opacity: 0.5;
+    background-color: #CCCCCC;
+}
 
