--- a/trade/src/main/webapp/css/memberjoin.css
+++ b/trade/src/main/webapp/css/memberjoin.css
@@ -1,5 +1,106 @@
 @charset "UTF-8";
 
+/* 약관 동의 */
+span.show {
+	color: darkgray;
+	font-size: 13px;
+	float:right;
+}
+
+label#label{
+    margin-bottom: -15px; 
+    
+}
+
+.show {
+	cursor: pointer;
+	position: relative;
+    z-index: 1;
+}
+
+
+#show1 {
+	margin-top: -16px;
+}
+
+#checkDiv {
+	font-family: 'Noto Sans KR';
+	
+}
+
+
+/* 체크박스 기본 스타일 */
+input[type="checkbox"] {
+    display: none;
+}
+
+input[type="checkbox"] + label {
+    font-size: 13px;
+    position: relative;
+    padding-left: 25px; /* 체크박스와 텍스트 간격을 조절할 수 있는 값 */
+    cursor: pointer;
+}
+
+input[type="checkbox"] + label:before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 1px;
+    width: 13px; /* 체크박스 크기 조절 */
+    height: 13px; /* 체크박스 크기 조절 */
+    border: 1.4px solid #656565; /* 체크박스 테두리 색상 */
+    border-radius: 2px;
+}
+
+/* 체크박스 선택 시 스타일 변경 */
+input[type="checkbox"]:checked + label:before {
+    background-color: #656565; /* 체크박스 선택됐을 때 색상 변경 */
+}
+
+input[type="checkbox"]:checked + label:after {
+    content: '\2713'; /* 체크 표시(체크마크)를 유니코드로 설정 */
+    font-size: 13px; /* 체크 표시 크기 */
+    position: absolute;
+    top: -2.2px;
+    left: 3px;
+    color: white;
+}
+
+input[type="checkbox"]:checked + label:after,
+input[type="checkbox"]:checked + .custom-checkbox:after {
+    content: '\2713'; /* 체크 표시(체크마크)를 유니코드로 설정 */
+    font-size: 13px; /* 체크 표시 크기 */
+    position: absolute;
+    top: -2.2px;
+    left: 3px;
+    color: white;
+}
+/* allCheck와 choice에 적용할 스타일 */
+#allCheck + label,
+#choice + label {
+    font-size: 13px;
+    position: relative;
+    padding-left: 25px;
+    cursor: pointer;
+}
+
+#allCheck + label:before,
+#choice + label:before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 1px;
+    width: 13px;
+    height: 13px;
+    border: 1.4px solid #656565;
+    border-radius: 2px;
+}
+
+#allCheck:checked + label:before,
+#choice:checked + label:before {
+    background-color: #656565;
+}
+
 fieldset {
   border: 2px solid #222;
   border-radius: 10px;
@@ -80,14 +181,12 @@ form .in[type="radio"] {
   margin: 7px 2px 15px 15px;
 }
 
-/* Add some spacing between elements */
 form hr {
-  margin: 20px 0;
+	padding-top: 5px;
   border: none;
   border-top: 1px solid #ccc;
 }
 
-/* Style the address input and button */
 #address {
   width: calc(80% - 20px);
 }
