--- a/trade/src/main/webapp/css/main_styles_mypage.css
+++ b/trade/src/main/webapp/css/main_styles_mypage.css
@@ -37,6 +37,12 @@ body {
 	margin-top: 10rem;
 }
 
+.disabled1 {
+   opacity: 0.5;
+    background-color: #CCCCCC;
+}
+
+
 .container1 {
 	max-width: 1200px;
 	margin: 50px auto;
@@ -46,6 +52,8 @@ body {
 	justify-content: flex-start; /* 왼쪽으로 배치 */
 	gap: 30px; /* 아이템 사이의 간격 */
 }
+
+
 
 .product1 {
 	width: 23%;
@@ -103,8 +111,7 @@ body {
     100% { box-shadow: 0 0 8px rgba(255, 0, 255, 0.1); }
 }
 
-.disabled {
+.disabled1 {
    opacity: 0.5;
     background-color: #CCCCCC;
 }
-
