고객센터 완

--- a/trade/src/main/webapp/css/member112.css
+++ b/trade/src/main/webapp/css/member112.css
@@ -64,6 +64,7 @@ h2 {
    cursor: pointer;
    transition: background-color 0.3s;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* 버튼에 그림자 추가 */
+   margin: 5px;
 }
 
 .btn:hover {
