--- a/trade/src/main/webapp/css/checkid.css
+++ b/trade/src/main/webapp/css/checkid.css
@@ -1,5 +1,8 @@
 @charset "UTF-8";
-
+body {
+	font-family: 'Noto Sans KR', sans-serif;
+	
+}
 .input-id {
 	padding: 8px;
 	margin: 10px auto;
@@ -12,6 +15,18 @@
 	display: block;
 }
 
+input[type="text" i] {
+	width: 175px;
+	padding: 8px;
+	border: 1px solid #ccc; /* 연한 회색 테두리 색상 */
+	border-radius: 4px;
+	box-sizing: border-box;
+	background-color: #f9f9f9; /* 매우 연한 회색 배경색 */
+	color: #333;
+	 margin: 7px 2px;
+}
+
+
 hr {
 	margin: 20px 0;
 	border: none;
@@ -23,14 +38,20 @@ hr {
 }
 
 .btn {
-	margin: 10px 5px;
-	padding: 10px 5px;
-	background-color: #222;
-	color: white;
-	border: none;
-	border-radius: 5px;
-	cursor: pointer;
-	width: 100px;
+	 margin: 10px 5px;
+    padding: 10px 5px;
+    background-color: #222;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    width: 80px;
+    height: 30px;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    line-height: 15px; 
 }
 
 .center {
