--- a/trade/src/main/webapp/css/main_styles_mypage.css
+++ b/trade/src/main/webapp/css/main_styles_mypage.css
@@ -115,3 +115,41 @@ body {
    opacity: 0.5;
     background-color: #CCCCCC;
 }
+
+#bb1 {
+	/* margin: 5px 0px 0px 830px; */
+	width: 7%;
+	
+	padding: 10px;
+	margin: 5px 0px 0px 870px;
+	background-color: #222; /* 어두운 검정 계열 배경색 */
+	color: #fff; /* 흰색 텍스트 색상 */
+	text-align: center;
+	text-decoration: none;
+	border: none;
+	border-radius: 4px;
+	cursor: pointer;
+	transition: background-color 0.3s;
+	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+	
+	
+}
+
+#bb2 {
+	
+	width: 8%;
+	
+	padding: 10px;
+	margin: 0px;
+	background-color: #222; /* 어두운 검정 계열 배경색 */
+	color: #fff; /* 흰색 텍스트 색상 */
+	text-align: center;
+	text-decoration: none;
+	border: none;
+	border-radius: 4px;
+	cursor: pointer;
+	transition: background-color 0.3s;
+	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+
+}
+
