--- a/trade/src/main/webapp/css/main_styles.css
+++ b/trade/src/main/webapp/css/main_styles.css
@@ -1,11 +1,10 @@
 @charset "UTF-8";
 
 #all {
-   width:1903px;
-   height: 1024px;
+   width: 100%;
+   height: 100%;
    align-content: center;
-   margin-left: auto;
-   margin-right: auto;
+   margin-left: 200px auto 70px;
 }
 
 
@@ -60,12 +59,12 @@ object-position: center; /* 이미지 중앙에 위치 */
    padding: 0 20px;
    display: flex;
    flex-wrap: wrap;
-   justify-content: flex-start; /* 왼쪽으로 배치 */
+   justify-content: center;
    gap: 30px; /* 아이템 사이의 간격 */
 }
 
 .product {
-   width: 23%;
+   width: 250px;
    margin: 5% 0;
    background-color: #fff;
    border-radius: 10px;
