--- a/trade/src/main/webapp/css/main_styles_mypage.css
+++ b/trade/src/main/webapp/css/main_styles_mypage.css
@@ -7,27 +7,6 @@ body {
 	background-color: #ffffff;
 }
 
-.slider-container {
-	width: 60%; /* 슬라이더 컨테이너의 너비를 조절하여 여백 추가 */
-	margin: 100px auto 0; /* 위쪽 여백 추가 및 가운데 정렬 */
-	height: 60vh; /* 조절 가능한 높이 */
-	overflow: hidden;
-	position: relative;
-}
-
-.slider {
-	display: flex;
-	transition: transform 0.5s ease-in-out;
-}
-
-.slider img {
-	width: 100%;
-	height: 100%;
-	object-position: center; /* 이미지 중앙에 위치 */
-}
-
-/* 밑으로 추천 상품 슬라이더 */
-
 .title1 {
 	text-align-last: center;
 	width: 100%;
@@ -116,12 +95,11 @@ body {
     background-color: #CCCCCC;
 }
 
-#bb1 {
-	/* margin: 5px 0px 0px 830px; */
-	width: 7%;
-	
+.qnaBtn {
+	display: inline-block;
+	width: 150px;
 	padding: 10px;
-	margin: 5px 0px 0px 870px;
+	margin: 5px;
 	background-color: #222; /* 어두운 검정 계열 배경색 */
 	color: #fff; /* 흰색 텍스트 색상 */
 	text-align: center;
@@ -131,16 +109,15 @@ body {
 	cursor: pointer;
 	transition: background-color 0.3s;
 	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-	
-	
+	float: right;
 }
 
-#bb2 {
-	
-	width: 8%;
-	
-	padding: 10px;
-	margin: 0px;
+.payBtn {
+	display: inline-block;
+	width: 100px;
+	height: fit-content;
+	padding: 3px;
+	margin: 0 0 0 20px;
 	background-color: #222; /* 어두운 검정 계열 배경색 */
 	color: #fff; /* 흰색 텍스트 색상 */
 	text-align: center;
@@ -150,6 +127,4 @@ body {
 	cursor: pointer;
 	transition: background-color 0.3s;
 	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-
 }
-
