--- a/trade/src/main/webapp/css/findid.css
+++ b/trade/src/main/webapp/css/findid.css
@@ -1,14 +1,33 @@
 @charset "UTF-8";
 
+input{
+   padding: 8px;
+   border: 1px solid #ccc; /* 연한 회색 테두리 색상 */
+   border-radius: 4px;
+   box-sizing: border-box;
+   background-color: #f9f9f9; /* 매우 연한 회색 배경색 */
+   color: #333; /* 어두운 회색 텍스트 색상 */
+}
+
+select {
+	width: 300px;
+	padding: 8px;
+	border: 1px solid #ccc; /* 연한 회색 테두리 색상 */
+	border-radius: 4px;
+	box-sizing: border-box;
+	background-color: #f9f9f9; /* 매우 연한 회색 배경색 */
+	color: #333;
+	 margin: 7px 2px 15px;
+}
+
+
 fieldset {
   border: 2px solid #222;
   border-radius: 10px;
-  width: 25%;
-  margin: 0 auto; /* Center the fieldset horizontally */
+  width: 25rem;
+  margin: 13rem auto; 
   padding: 20px;
 }
-
-form
 
 legend {
   font-size: 18px;
@@ -23,7 +42,7 @@ form select {
   padding: 8px;
   width: 28%;
   border-radius: 4px;
-  margin: 7px 2px 15px 10px;
+/*   margin: 7px 2px 15px 10px; */
 }
 
 form .in[type="button"],
@@ -70,66 +89,44 @@ form .in[type="button"]#searchButton {
   margin-left: 10px;
 }
 
+.ju {
+	margin-left: 15px;
+}
+.pho {
+	margin-left: 15px;
+}
 
 #jumin {
-	padding: 8px;
-  width: 14%;
-  border-radius: 4px;
-  margin: 7px 2px 15px 20px;
+padding: 8px;
+ width: 23%;
+ border-radius: 4px;
+margin: 2px 2.7px 15px 2.7px;
 	
 }
 
-#jumin2 {
-	padding: 8px;
-  width: 14%;
-  border-radius: 4px;
-  margin: 7px 2px 15px;
-	
+#pre {
+	float:left;
 }
-
-#jumin3 {
-	padding: 8px;
-  width: 14%;
-  border-radius: 4px;
-  margin: 7px 2px 15px;
-	
+#find {
+	float:right;
 }
 
 #num {
-	padding: 8px;
-  width: 13%;
-  border-radius: 4px;
-  margin: 7px 2px 15px;
+padding: 8px;
+ width: 23%;
+ border-radius: 4px;
+margin-bottom: 15px;
+margin-top: 2px;
 }
 
-#num2 {
-	padding: 8px;
-  width: 10%;
-  border-radius: 4px;
-  margin: 7px 2px 15px;
-}
-
-#num3 {
-	padding: 8px;
-  width: 10%;
-  border-radius: 4px;
-  margin: 7px 2px 15px;
-}
-
-#num3 {
-	padding: 8px;
-  width: 10%;
-  border-radius: 4px;
-  margin: 7px 2px 15px;
+#num1 {
+	width: 23%;
+	margin: 2px 3px 15px;
 }
 
 #na {
 padding: 8px;
-  width: 28%;
+  width: 79%;
   border-radius: 4px;
   margin: 7px 2px 15px 47px;
-}
-
-#bu {
-	margin: 7px 2px 15px 250px;
 }
