--- a/trade/src/main/webapp/css/login.css
+++ b/trade/src/main/webapp/css/login.css
@@ -19,7 +19,9 @@
     margin-top: 150px;
 }
 #log {
-	margin-top: 10px;
+	margin-top: 1.7rem;
+	height: 3rem;
+	font-size: 16px;
 }
 
 /*아이디·비밀번호 찾기 */
@@ -40,8 +42,7 @@
 }
 
 .button-container {
-	margin-left: auto;
-	margin-right: auto;
+	margin: 15px auto auto;
     display: flex;
 }
 
@@ -55,13 +56,13 @@
 }
 
 .l {
-    margin-bottom: 10px;
+    margin-bottom: 6px;
     color: #333;
 }
 
 .i {
     padding: 10px;
-    margin-bottom: 20px;
+    margin-bottom: 6px;
     width: 100%;
     box-sizing: border-box;
     border: 1px solid #656565;
