--- a/trade/src/main/webapp/css/main_styles_mypage.css
+++ b/trade/src/main/webapp/css/main_styles_mypage.css
@@ -20,18 +20,23 @@ body {
    opacity: 0.5;
     background-color: #CCCCCC;
 }
-
-
-.container1 {
-	max-width: 1200px;
-	margin: 50px auto;
-	padding: 0 20px;
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: flex-start; /* 왼쪽으로 배치 */
-	gap: 30px; /* 아이템 사이의 간격 */
+.container {
+	max-width: 100%;
 }
 
+.container1 {
+    max-width: 1200px;
+    margin: 50px auto;
+    padding: 0 20px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 30px;
+}
+
+.container1 div:nth-child(n+5) {
+    grid-column: span 1;
+    margin-top: 30px;
+}
 
 
 .product1 {
